syntax = "proto3";
package order;

option go_package = "./pkg/order_svc/pb";

service PaymentService {
    rpc CreateTransaction(CreateTransactionRequest) returns (CreateTransactionResponse) {}
    rpc GetTransactions(GetTransactionRequest) returns (GetTransactionResponse) {}
    rpc GetWalletBalance(GetWalletBalanceRequest) returns (GetWalletBalanceResponse) {}
    
  }
  
  message GetWalletBalanceRequest {
    int64 id = 1;
  }

  message GetWalletBalanceResponse {
    int64 status = 1;
    string error = 2;
    UserWallet data = 3;
  }

  message UserWallet {
    string full_name = 1;
    string ramp_id = 2;
    string wallet_balance = 4;
  }

  message CreateTransactionRequest {
    string PayerRampId = 1;
    string PayeeRampId = 2;
    float PaymentAmount = 3;
  }
  

  message CreateTransactionResponse {
    int32 status = 1;
    string error = 2;
    string id = 3;
  }
  
  message GetTransactionRequest {}

  message GetTransactionResponse {
    int64 status = 1;
    string error = 2;
    repeated Transaction transaction = 3;
  }
  
  message Transaction {
    int64 id = 1;
    string order_id = 8;
    string payer_ramp_id = 6;
    string payee_ramp_id = 5;
    string payment_amount = 7;
    string payment_date = 9;
  }
  
  message Item {
    string ID = 1;
    string Description =2 ;
    float Price = 3;
    int64 Quantity = 4;
  } 